@@ -19,7 +19,10 @@
  */
 package org.neo4j.io.mem;
 
-import sun.misc.Cleaner;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
+import java.util.Objects;
 
 import org.neo4j.memory.MemoryAllocationTracker;
 import org.neo4j.unsafe.impl.internal.dragons.UnsafeUtil;
@@ -33,9 +36,12 @@ import static org.neo4j.util.FeatureToggles.getInteger;
  */
 public final class GrabAllocator implements MemoryAllocator
 {
+    private static final Object globalCleanerInstance = globalCleaner();
+
     private final Grabs grabs;
     @SuppressWarnings( {"unused", "FieldCanBeLocal"} )
-    private final Cleaner cleaner;
+    private final Object cleaner;
+    private final MethodHandle cleanHandle;
 
     /**
      * Create a new GrabAllocator that will allocate the given amount of memory, to pointers that are aligned to the
@@ -47,7 +53,16 @@ public final class GrabAllocator implements MemoryAllocator
     GrabAllocator( long expectedMaxMemory, MemoryAllocationTracker memoryTracker )
     {
         this.grabs = new Grabs( expectedMaxMemory, memoryTracker );
-        this.cleaner = Cleaner.create( this, new GrabsDeallocator( grabs ) );
+        try
+        {
+            CleanerHandles handles = findCleanerHandles();
+            this.cleaner = handles.creator.invoke( this, new GrabsDeallocator( grabs ) );
+            this.cleanHandle = handles.cleaner;
+        }
+        catch ( Throwable throwable )
+        {
+            throw new LinkageError( "Unable to instantiate cleaner", throwable );
+        }
     }
 
     @Override
@@ -71,7 +86,14 @@ public final class GrabAllocator implements MemoryAllocator
     @Override
     public void close()
     {
-        cleaner.clean();
+        try
+        {
+            cleanHandle.invoke( cleaner );
+        }
+        catch ( Throwable throwable )
+        {
+            throw new LinkageError( "Unable to clean cleaner.", throwable );
+        }
     }
 
     private static class Grab
@@ -275,6 +297,85 @@ public final class GrabAllocator implements MemoryAllocator
                     // Okay, we tried.
                 }
             }
+        }
+    }
+
+    private static Object globalCleaner()
+    {
+        MethodHandles.Lookup lookup = MethodHandles.lookup();
+        try
+        {
+            Class<?> newCleaner = Class.forName( "java.lang.ref.Cleaner" );
+            MethodHandle createInstance = lookup.findStatic( newCleaner, "create", MethodType.methodType( newCleaner ) );
+            return createInstance.invoke();
+        }
+        catch ( Throwable throwable )
+        {
+            return null;
+        }
+    }
+
+    private static CleanerHandles findCleanerHandles()
+    {
+        MethodHandles.Lookup lookup = MethodHandles.lookup();
+        return globalCleanerInstance == null ? findHandlesForOldCleaner( lookup ) : findHandlesForNewCleaner( lookup );
+    }
+
+    private static CleanerHandles findHandlesForNewCleaner( MethodHandles.Lookup lookup )
+    {
+        try
+        {
+            Objects.requireNonNull( globalCleanerInstance );
+            Class<?> newCleaner = globalCleanerInstance.getClass();
+            Class<?> newCleanable = Class.forName( "java.lang.ref.Cleaner$Cleanable" );
+            MethodHandle registerHandle = findCreationMethod( "register", lookup, newCleaner );
+            registerHandle = registerHandle.bindTo( globalCleanerInstance );
+            return CleanerHandles.of( registerHandle, findCleanMethod( lookup, newCleanable ) );
+        }
+        catch ( ClassNotFoundException | NoSuchMethodException | IllegalAccessException newCleanerException )
+        {
+            throw new LinkageError( "Unable to find cleaner methods.", newCleanerException );
+        }
+    }
+
+    private static CleanerHandles findHandlesForOldCleaner( MethodHandles.Lookup lookup )
+    {
+        try
+        {
+            Class<?> oldCleaner = Class.forName( "sun.misc.Cleaner" );
+            return CleanerHandles.of( findCreationMethod( "create", lookup, oldCleaner ), findCleanMethod( lookup, oldCleaner ) );
+        }
+        catch ( ClassNotFoundException | NoSuchMethodException | IllegalAccessException oldCleanerException )
+        {
+            throw new LinkageError( "Unable to find cleaner methods.", oldCleanerException );
+        }
+    }
+
+    private static MethodHandle findCleanMethod( MethodHandles.Lookup lookup, Class<?> cleaner ) throws IllegalAccessException, NoSuchMethodException
+    {
+        return lookup.unreflect( cleaner.getDeclaredMethod( "clean" ) );
+    }
+
+    private static MethodHandle findCreationMethod( String methodName, MethodHandles.Lookup lookup, Class<?> cleaner )
+            throws IllegalAccessException, NoSuchMethodException
+    {
+        return lookup.unreflect( cleaner.getDeclaredMethod( methodName, Object.class, Runnable.class ) );
+    }
+
+    private static final class CleanerHandles
+    {
+        private final MethodHandle creator;
+        private final MethodHandle cleaner;
+
+        static CleanerHandles of( MethodHandle creator, MethodHandle cleaner )
+        {
+            return new CleanerHandles( creator, cleaner );
+        }
+
+        private CleanerHandles( MethodHandle creator, MethodHandle cleaner )
+        {
+            this.creator = creator;
+            this.cleaner = cleaner;
         }
     }
 
